--- a/.travis.yml
+++ b/.travis.yml
@@ -21,12 +21,14 @@ before_install:
   - if [ $TRAVIS_OS_NAME == osx ]; then sudo chown -R $(whoami) /usr/local; fi
   - if [ $TRAVIS_OS_NAME == osx ]; then brew update; fi
   - if [ $TRAVIS_OS_NAME == osx ]; then brew install swig; fi
+  # work around https://github.com/travis-ci/travis-ci/issues/8363
+  - pyenv global system 3.6
 
 script:
   - cmake --version
   - cmake -H. -Bbuild
   - cmake --build build --target all
+  - cmake --build build --target testenv
   
 after_script:  
-  - cmake --build build --target testenv
   - cmake --build build --target test
