--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,8 @@ before_install:
   - if [ $TRAVIS_OS_NAME == osx ]; then brew update; fi
   - if [ $TRAVIS_OS_NAME == osx ]; then brew install swig; fi
   # work around https://github.com/travis-ci/travis-ci/issues/8363
-  - pyenv global system 3.6
+  - if [ $TRAVIS_OS_NAME == linux ]; then pyenv global system 3.6; fi
+  - if [ $TRAVIS_OS_NAME == osx ]; then pyenv global system 2.7; fi
 
 script:
   - cmake --version
