--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_install:
   - if [ $TRAVIS_OS_NAME == linux ]; then sudo apt-get -y install swig; fi
     # work around https://github.com/travis-ci/travis-ci/issues/8363
   - if [ $TRAVIS_OS_NAME == linux ]; then pyenv global system 3.6; fi
-  
+
   - if [ $TRAVIS_OS_NAME == osx ]; then sudo chown -R $(whoami) /usr/local; fi
     # work around https://github.com/travis-ci/travis-ci/issues/8552
   - if [ $TRAVIS_OS_NAME == osx ]; then brew update; fi
@@ -31,4 +31,5 @@ script:
   - cmake --version
   - cmake -H. -Bbuild
   - cmake --build build --target all
-  - cmake --build build --target test
+  - cd build && ctest -V --output-on-failure
+    #  - cmake --build build --target test
