--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ before_install:
   - if [ $TRAVIS_OS_NAME == linux ]; then sudo apt-get -y install swig; fi
     # work around https://github.com/travis-ci/travis-ci/issues/8363
   - if [ $TRAVIS_OS_NAME == linux ]; then pyenv global system 3.6; fi
+  - if [ $TRAVIS_OS_NAME == linux ]; then pip --version && pip install virtualenv; fi
 
   - if [ $TRAVIS_OS_NAME == osx ]; then sudo chown -R $(whoami) /usr/local; fi
     # work around https://github.com/travis-ci/travis-ci/issues/8552
