--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,8 @@ before_install:
   - if [ $TRAVIS_OS_NAME == linux ]; then sudo apt-get -y install swig; fi
     # work around https://github.com/travis-ci/travis-ci/issues/8363
   - if [ $TRAVIS_OS_NAME == linux ]; then pyenv global system 3.6; fi
-  - if [ $TRAVIS_OS_NAME == linux ]; then pip3.6 --version && pip install virtualenv; fi
+  - if [ $TRAVIS_OS_NAME == linux ]; then python3.6 --version; python3.6 -m pip --version; fi
+  - if [ $TRAVIS_OS_NAME == linux ]; then python3.6 -m pip install virtualenv; fi
 
   - if [ $TRAVIS_OS_NAME == osx ]; then sudo chown -R $(whoami) /usr/local; fi
     # work around https://github.com/travis-ci/travis-ci/issues/8552
@@ -29,8 +30,6 @@ before_install:
 
 
 script:
-  - python --version
-  - python -m pip --version
   - cmake --version
   - cmake -H. -Bbuild
   - cmake --build build --target all
