--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,8 @@ before_install:
   - if [ $TRAVIS_OS_NAME == osx ]; then brew update; fi
   - if [ $TRAVIS_OS_NAME == osx ]; then brew install swig; fi
   - if [ $TRAVIS_OS_NAME == osx ]; then brew install python3; fi
+  - if [ $TRAVIS_OS_NAME == osx ]; then python3 --version; python3 -m pip --version; fi
+  - if [ $TRAVIS_OS_NAME == osx ]; then python3 -m pip install virtualenv; fi
 
 
 script:
