Add config to build_venv
otherwise on windows it build venv in Debug instead of Release -> fail

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -112,6 +112,7 @@ if (BUILD_TESTING)
 		# Let wrap this target in a test (see below)
 		add_test(build_venv "${CMAKE_COMMAND}"
 			--build ${CMAKE_BINARY_DIR}
+			--config $<CONFIG>
 			--target testenv)
 
     # run the tests within the virtualenv
