--- a/FooBar/CMakeLists.txt
+++ b/FooBar/CMakeLists.txt
@@ -1,5 +1,15 @@
 project(FooBar VERSION 1.0.0 LANGUAGES CXX)
 
+if(MSVC)
+# Second, for multi-config builds (e.g. msvc)
+foreach(OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES})
+    string(TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG)
+    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_CURRENT_BINARY_DIR})
+    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_CURRENT_BINARY_DIR})
+    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_CURRENT_BINARY_DIR})
+endforeach()
+endif()
+
 find_package(Foo REQUIRED)
 find_package(Bar REQUIRED)
 
