--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,18 @@ matrix:
 before_install:
   - eval "${MATRIX_EVAL}"
   - if [ $TRAVIS_OS_NAME == linux ]; then sudo apt-get -qq update; fi
-  - if [ $TRAVIS_OS_NAME == linux ]; then sudo apt-get -y install swig; fi
+    # apt-get only have swig 2.0.11
+  - if [ $TRAVIS_OS_NAME == linux ]; then
+    cd /tmp/;
+      curl -s -J -O -k -L 'https://sourceforge.net/projects/swig/files/swig/swig-3.0.12/swig-3.0.12.tar.gz/download';
+      tar zxf swig-3.0.12.tar.gz;
+      cd swig-3.0.12;
+      ./configure --prefix $HOME/swig/;
+      make;
+      make install;
+      export PATH=${HOME}/swig/bin:${PATH}
+      cd $TRAVIS_BUILD_DIR;
+    fi
     # work around https://github.com/travis-ci/travis-ci/issues/8363
   - if [ $TRAVIS_OS_NAME == linux ]; then pyenv global system 3.6; fi
   - if [ $TRAVIS_OS_NAME == linux ]; then python3.6 --version; python3.6 -m pip --version; fi
