--- a/.travis.yml
+++ b/.travis.yml
@@ -44,6 +44,7 @@ before_install:
 
 script:
   - cmake --version
+  - swig -version
   - cmake -H. -Bbuild
   - cmake --build build --target all
   - cmake --build build --target test
