Using CMakeSwig cmake namespace

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,35 +1,32 @@
 # This file is just an orchestration
 cmake_minimum_required(VERSION 3.9)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
-if(NOT CMAKE_BUILD_TYPE)
-  set(CMAKE_BUILD_TYPE "Release" CACHE STRING
-		"Choose the type of build, options are: Debug Release RelWithDebInfo MinSizeRel."
-		FORCE)
-endif(NOT CMAKE_BUILD_TYPE)
-
-# Use find_package everywhere, no-op if it's a target
-macro(find_package)
-	if(NOT TARGET ${ARGV0} AND NOT TARGET ${ARGV0}::${ARGV0})
-		_find_package(${ARGV})
-	else()
-		if(TARGET ${ARGV0})
-			get_target_property(TGT_VER ${ARGV0} VERSION)
-			set(TGT ${ARGV0})
-		else()
-			get_target_property(TGT_VER ${ARGV0}::${ARGV0} VERSION)
-			set(TGT ${ARGV0}::${ARGV0})
-		endif()
-		message(STATUS "Found ${ARGV0}: CMake Target ${TGT} (found version \"${TGT_VER}\")")
-		set(${ARGV0}_FOUND TRUE)
-	endif()
-endmacro()
 
 # Apple: Don't modify install_name when touching RPATH.
 if(POLICY CMP0068)
 	cmake_policy(SET CMP0068 NEW)
 endif()
 
-project(swig_template VERSION 1.0 LANGUAGES NONE)
+# Force default build type to Release
+if(NOT CMAKE_BUILD_TYPE)
+  set(CMAKE_BUILD_TYPE "Release" CACHE STRING
+		"Choose the type of build, options are: Debug Release RelWithDebInfo MinSizeRel."
+		FORCE)
+endif(NOT CMAKE_BUILD_TYPE)
+
+# Usage find_target(TARGET_NAME TARGET_PACKAGE [PACKAGE OPTIONS]).
+# e.g.: find_target(protobuf::libprotobuf Protobuf REQUIRED)
+macro(find_target TARGET_NAME TARGET_PACKAGE)
+	if(TARGET ${TARGET_NAME})
+		get_target_property(TGT_VERSION ${TARGET_NAME} VERSION)
+		message(STATUS "Found Target: ${TARGET_NAME} (found version \"${TGT_VERSION}\")")
+		set(${TARGET_PACKAGE}_FOUND TRUE)
+	else()
+		find_package(${TARGET_PACKAGE} ${ARGN})
+	endif()
+endmacro()
+
+project(meta VERSION 1.0 LANGUAGES NONE)
 
 include(CTest)
 set(CMAKE_VERBOSE_MAKEFILE ON)
@@ -37,7 +34,7 @@ if(UNIX)
 	set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
 	option(BUILD_SHARED_LIBS "Build shared libraries(.so or .dyld)." ON)
 else()
-	# Windows only support static build.
+	# Only support static build.for windows
  set(BUILD_SHARED_LIBS OFF)
  include(swig)
 endif()
@@ -149,3 +146,25 @@ if(BUILD_TESTING)
 	# run the tests within the virtualenv
 	add_test(pytest_venv ${VENV_BIN_DIR}/python ${CMAKE_CURRENT_SOURCE_DIR}/cmake/test.py)
 endif()
+
+# Install
+include(GNUInstallDirs)
+install(EXPORT CMakeSwigTargets
+	NAMESPACE CMakeSwig::
+	DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/CMakeSwig
+	COMPONENT Devel)
+include(CMakePackageConfigHelpers)
+configure_package_config_file(cmake/CMakeSwigConfig.cmake.in
+	"${PROJECT_BINARY_DIR}/CMakeSwigConfig.cmake"
+	INSTALL_DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/CMakeSwig"
+	NO_SET_AND_CHECK_MACRO
+  NO_CHECK_REQUIRED_COMPONENTS_MACRO)
+write_basic_package_version_file(
+	"${PROJECT_BINARY_DIR}/CMakeSwigConfigVersion.cmake"
+	COMPATIBILITY SameMajorVersion)
+install(
+	FILES
+	"${PROJECT_BINARY_DIR}/CMakeSwigConfig.cmake"
+	"${PROJECT_BINARY_DIR}/CMakeSwigConfigVersion.cmake"
+	DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/CMakeSwig"
+	COMPONENT Devel)
