--- a/Bar/CMakeLists.txt
+++ b/Bar/CMakeLists.txt
@@ -19,7 +19,7 @@ target_include_directories(${PROJECT_NAME} PUBLIC
 	$<INSTALL_INTERFACE:include>)
 set_target_properties(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER ${_HDRS})
 #target_link_libraries(${PROJECT_NAME} PUBLIC ...)
-add_library(${PROJECT_NAME}::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
+add_library(CMakeSwig::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
 
 # Python Wrapper
 add_subdirectory(python)
@@ -27,14 +27,9 @@ add_subdirectory(python)
 # Install
 include(GNUInstallDirs)
 install(TARGETS ${PROJECT_NAME}
-	EXPORT ${PROJECT_NAME}Targets
-	INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+	EXPORT CMakeSwigTargets
 	PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/bar
 	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
 	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
 	#RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-	)
-install(EXPORT ${PROJECT_NAME}Targets
-	NAMESPACE ${PROJECT_NAME}::
-	DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}
 	)
