--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ before_install:
 
   - if [ $TRAVIS_OS_NAME == osx ]; then brew update; fi
   - if [ $TRAVIS_OS_NAME == osx ]; then brew install swig; fi
-  - if [ $TRAVIS_OS_NAME == osx ]; then brew install python3; fi
+  - if [ $TRAVIS_OS_NAME == osx ]; then brew upgrade python; fi
   - if [ $TRAVIS_OS_NAME == osx ]; then python3 --version; python3 -m pip --version; fi
   - if [ $TRAVIS_OS_NAME == osx ]; then python3 -m pip install virtualenv wheel; fi
 
