--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,44 @@ sudo: required
 language: cpp
 matrix:
   include:
-    - os: linux
-      dist: trusty
-      compiler: clang
+# GNU/Linux
     - os: linux
       dist: trusty
       compiler: gcc
+      env: LANGUAGE=cpp
+    - os: linux
+      dist: trusty
+      compiler: gcc
+      env: LANGUAGE=python2
+    - os: linux
+      dist: trusty
+      compiler: gcc
+      env: LANGUAGE=python3
+    - os: linux
+      dist: trusty
+      compiler: gcc
+      env: LANGUAGE=dotnet
+    - os: linux
+      dist: trusty
+      compiler: gcc
+      env: LANGUAGE=java
+
+# OSX
     - os: osx
       compiler: clang
+      env: LANGUAGE=cpp
     - os: osx
-      compiler: gcc
+      compiler: clang
+      env: LANGUAGE=python2
+    - os: osx
+      compiler: clang
+      env: LANGUAGE=python3
+    - os: osx
+      compiler: clang
+      env: LANGUAGE=dotnet
+    - os: osx
+      compiler: clang
+      env: LANGUAGE=java
 
 before_install:
   - eval "${MATRIX_EVAL}"
@@ -28,21 +56,49 @@ before_install:
       export PATH=${HOME}/swig/bin:${PATH};
       cd $TRAVIS_BUILD_DIR;
     fi
+  - if [[ $TRAVIS_OS_NAME == linux && $LANGUAGE == python2 ]]; then
     # work around https://github.com/travis-ci/travis-ci/issues/8363
-  - if [ $TRAVIS_OS_NAME == linux ]; then pyenv global system 3.6; fi
-  - if [ $TRAVIS_OS_NAME == linux ]; then python3.6 --version; python3.6 -m pip --version; fi
-  - if [ $TRAVIS_OS_NAME == linux ]; then python3.6 -m pip install virtualenv wheel; fi
+    pyenv global system 2.7;
+    python2.7 --version;
+    python2.7 -m pip --version;
+    python2.7 -m pip install virtualenv wheel six;
+    fi
+  - if [[ $TRAVIS_OS_NAME == linux && $LANGUAGE == python3 ]]; then
+    # work around https://github.com/travis-ci/travis-ci/issues/8363
+    pyenv global system 3.6;
+    python3.6 --version;
+    python3.6 -m pip --version;
+    python3.6 -m pip install virtualenv wheel six;
+    fi
 
-  - if [ $TRAVIS_OS_NAME == osx ]; then brew update; fi
-  - if [ $TRAVIS_OS_NAME == osx ]; then brew install swig; fi
-  - if [ $TRAVIS_OS_NAME == osx ]; then brew upgrade python; fi
-  - if [ $TRAVIS_OS_NAME == osx ]; then python3 --version; python3 -m pip --version; fi
-  - if [ $TRAVIS_OS_NAME == osx ]; then python3 -m pip install virtualenv wheel; fi
-
+  - if [ $TRAVIS_OS_NAME == osx ]; then
+    sudo chown -R $(whoami) /usr/local;
+    # work around https://github.com/travis-ci/travis-ci/issues/8552
+    brew update;
+    brew install swig;
+    fi
+  - if [[ $TRAVIS_OS_NAME == osx && $LANGUAGE == python2 ]]; then
+    brew install python@2;
+    python2 --version;
+    python2 -m pip --version;
+    python2 -m pip install virtualenv wheel;
+    fi
+  - if [[ $TRAVIS_OS_NAME == osx && $LANGUAGE == python3 ]]; then
+    brew upgrade python;
+    python3 --version;
+    python3 -m pip --version;
+    python3 -m pip install virtualenv wheel;
+    fi
 
 script:
   - cmake --version
   - swig -version
+  - if [[ $LANGUAGE == python2 || $LANGUAGE == python3 ]]; then
+    python --version
+    fi
+  - if [[ $LANGUAGE == dotnet ]]; then
+    dotnet --info
+    fi
   - cmake -H. -Bbuild
   - cmake --build build --target all
   - cmake --build build --target test
